fix(upload-modal-ui): fix text overflow

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -543,6 +543,10 @@
 .UploadReadyFiles__name {
   width: 60%;
   text-align: left;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 300px;
 }
 
 .UploadReadyFiles__size {
